--- a/20180308a.ipynb
+++ b/20180308a.ipynb
@@ -142,6 +142,160 @@
     "\\nabla \\cdot \\vec{\\mathbf{B}} & = 0 \n",
     "\\end{eqnarray}\"\"\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "is odd\n",
+      "2\n",
+      "is even\n",
+      "3\n",
+      "is odd\n",
+      "4\n",
+      "is even\n",
+      "5\n",
+      "is odd\n",
+      "6\n",
+      "is even\n",
+      "All done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "listOfNumbers = [1, 2, 3, 4, 5, 6]\n",
+    "for number in listOfNumbers:\n",
+    "    print(number)\n",
+    "    if (number % 2 == 0):\n",
+    "        print(\"is even\")\n",
+    "    else:\n",
+    "        print(\"is odd\")\n",
+    "\n",
+    "print (\"All done.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "7//3\n",
+    "7%4\n",
+    "2^8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My number is 12, and my name is Sam.\n",
+      "4\n",
+      "5\n",
+      "5\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 12\n",
+    "name = 'Sam'\n",
+    "print('My number is {}, and my name is {}.'.format(num,name))\n",
+    "a, b = 4,5\n",
+    "print(a)\n",
+    "print(b)\n",
+    "a, b = b,a\n",
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'target'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [10, 2, 3, 4, 5, 6]\n",
+    "print(len(x))\n",
+    "['hi',1,[1,2]]\n",
+    "nest = [1,2,3,[4,5,['target']]]\n",
+    "nest[3][2][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'remove'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-56-c6306a30b1e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdict\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m'k1'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'k2'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m45\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'k1'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mdict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'k1'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'remove'"
+     ]
+    }
+   ],
+   "source": [
+    "dict = {'k1':12, 'k2':45}\n",
+    "dict['k1']\n",
+    "dict.remove('k1')\n",
+    "dict"
+   ]
   }
  ],
  "metadata": {
